--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,15 @@
 /*  your css code here. If applicable */
+body{
+	background-color:#f5f5f5;
+	padding:10px;
+}
+.d1{
+	background-color:white;
+	border:1px solid white;
+	padding:10px;
+	
+	
+}
+.p1{
+	text-align:right;
+}
